added contact us portion

--- a/src/components/HowDoWeDo/howDoWeDo.scss
+++ b/src/components/HowDoWeDo/howDoWeDo.scss
@@ -8,6 +8,7 @@
   color: white;
   background: #FEB5AE;
   height: 800px;
+  width: 100%;
   text-align: center;
   h1 {
     padding-top: 2rem;
@@ -15,7 +16,11 @@
 }
 
 .howDivs {
-  width: 40%;
-  height: 300px;
+  width: 50%;
+  height: auto;
   float: left;
+  p {
+    width: 75%;
+    margin-left: 12%;
+  }
 }
